5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1675_1950.log
== TEST (2019-05-02 12:23:54) 
-- CODE:
t = float(input("Insira o valor em graus: "))
v = float(input("Insira a velocidade do vento: "))

o = 13.12 + 0.6215 * t - (11.37 * (v ** 0.16)) + (0.3965)
-- OUTPUT:
15 de 8 de 1990 eh uma data valida
15 8 1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:23:54) 
-- CODE:
t = float(input("Insira o valor em graus: "))
v = float(input("Insira a velocidade do vento: "))

o = 13.12 + 0.6215 * t - (11.37 * (v ** 0.16)) + (0.3965)
-- OUTPUT:
15 de 8 de 1990 eh uma data valida
15 8 1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:23:55) 
-- CODE:
t = float(input("Insira o valor em graus: "))
v = float(input("Insira a velocidade do vento: "))

o = 13.12 + 0.6215 * t - (11.37 * (v ** 0.16)) + (0.3965)
-- OUTPUT:
15 de 8 de 1990 eh uma data valida
15 8 1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:23:55) 
-- CODE:
t = float(input("Insira o valor em graus: "))
v = float(input("Insira a velocidade do vento: "))

o = 13.12 + 0.6215 * t - (11.37 * (v ** 0.16)) + (0.3965)
-- OUTPUT:
15 de 8 de 1990 eh uma data valida
15 8 1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:23:55) 
-- CODE:
t = float(input("Insira o valor em graus: "))
v = float(input("Insira a velocidade do vento: "))

o = 13.12 + 0.6215 * t - (11.37 * (v ** 0.16)) + (0.3965)
-- OUTPUT:
15 de 8 de 1990 eh uma data valida
15 8 1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:32:27) 
-- CODE:
t = float(input("Insira o valor em graus: "))
v = float(input("Insira a velocidade do vento: "))

if((t >= -50) and (t <= 10) and (v > 4.8)):
	o = 13.12 + 0.6215 * t - (11.37 * (v ** 0.16)) + (0.3965 * t * (v ** 0.16)
	print(round(o, 4))
else:
   if(t < -50 or t > 10):
	print("Temperatura invalida")
	elif(v <= 4.8):
	print("Velocidade invalida")
-- ERROR:
File "XXXX", line 6
    print(round(o, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:33:23) 
-- CODE:
t = float(input("Insira o valor em graus: "))
v = float(input("Insira a velocidade do vento: "))

if((t >= -50) and (t <= 10) and (v > 4.8)):
	o = 13.12 + 0.6215 * t - (11.37 * (v ** 0.16)) + (0.3965 * t * (v ** 0.16)
	O = round(o, 4)
	print(O)
else:
   if(t < -50 or t > 10):
	print("Temperatura invalida")
	elif(v <= 4.8):
	print("Velocidade invalida")
-- ERROR:
File "XXXX", line 6
    O = round(o, 4)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:34:06) 
-- CODE:
t = float(input("Insira o valor em graus: "))
v = float(input("Insira a velocidade do vento: "))

if((t >= -50) and (t <= 10) and (v > 4.8)):
	o = ((13.12 + 0.6215) * t) - (11.37 * (v ** 0.16)) + (0.3965 * t * (v ** 0.16))
	O = round(o, 4)
	print(O)
else:
   if(t < -50 or t > 10):
	print("Temperatura invalida")
	elif(v <= 4.8):
	print("Velocidade invalida")
-- ERROR:
File "XXXX", line 10
    print("Temperatura invalida")
                                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:36:53) 
-- CODE:
t = float(input("Insira o valor em graus: "))
v = float(input("Insira a velocidade do vento: "))

if(v > 4.8):
	if(t >= -50 and t <= 10):
		o = 13.12 + 0.6215 * t - (11.37 * (v ** 0.16)) + (0.3965 * t * (v ** 0.16)
		print(round(o, 4))
	else:
		print("Temperatura invalida")
else:
	print("Velocidade invalida")
-- ERROR:
File "XXXX", line 7
    print(round(o, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:38:41) 
-- CODE:
t = float(input("Insira o valor em graus: "))
v = float(input("Insira a velocidade do vento: "))

if(v > 4.8):
	if(t >= -50 and t <= 10):
		a = ((13.12 + 0.6215) * t) - ((11.37 * (v ** 0.16)) + (0.3965 * t * (v ** 0.16)))
		print(round(a, 4))
	else:
		print("Temperatura invalida")
else:
	print("Velocidade invalida")
-- OUTPUT:
Temperatura invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:39:19) 
-- CODE:
t = float(input("Insira o valor em graus: "))
v = float(input("Insira a velocidade do vento: "))

if(v > 4.8):
	if(t >= -50 and t <= 10):
		a = ((13.12 + 0.6215) * t) - (11.37 * (v ** 0.16)) + (0.3965 * t * (v ** 0.16))
		print(round(a, 4))
	else:
		print("Temperatura invalida")
else:
	print("Velocidade invalida")
-- OUTPUT:
Temperatura invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:39:55) 
-- CODE:
t = float(input("Insira o valor em graus: "))
v = float(input("Insira a velocidade do vento: "))

if(v > 4.8):
	if(t >= -50 and t <= 10):
		a = (13.12 + (0.6215 * t)) - (11.37 * (v ** 0.16)) + (0.3965 * t * (v ** 0.16)
		print(round(a, 4))
	else:
		print("Temperatura invalida")
else:
	print("Velocidade invalida")
-- ERROR:
File "XXXX", line 7
    print(round(a, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:40:24) 
-- CODE:
t = float(input("Insira o valor em graus: "))
v = float(input("Insira a velocidade do vento: "))

if(v > 4.8):
	if(t >= -50 and t <= 10):
		a = (13.12 + (0.6215 * t) - (11.37 * (v ** 0.16)) + (0.3965 * t * (v ** 0.16)))
		print(round(a, 4))
	else:
		print("Temperatura invalida")
else:
	print("Velocidade invalida")
-- OUTPUT:
Temperatura invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 12:40:34) 
-- CODE:
t = float(input("Insira o valor em graus: "))
v = float(input("Insira a velocidade do vento: "))

if(v > 4.8):
	if(t >= -50 and t <= 10):
		a = (13.12 + (0.6215 * t) - (11.37 * (v ** 0.16)) + (0.3965 * t * (v ** 0.16)))
		print(round(a, 4))
	else:
		print("Temperatura invalida")
else:
	print("Velocidade invalida")
-- EXECUTION TIME:
0.143424
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
Temperatura invalida
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
Velocidade invalida
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
-14.9563
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
